# integrate-executor

./: CMakeLists.txt  README.md
include/: function.hpp  integral.hpp  main_texts.hpp  method.hpp
include/functions/: func-1.hpp  func-2.hpp  func-3.hpp  func-4.hpp  func-5.hpp
include/methods/: left-rectangles-method.hpp  middle-rectangles-method.hpp  right-rectangles-method.hpp  simpsons-method.hpp  trapezes-method.hpp
src/: integral.cpp  main.cpp
src/functions/: func-1.cpp  func-2.cpp  func-3.cpp  func-4.cpp  func-5.cpp
src/methods/: left-rectangles-method.cpp  middle-rectangles-method.cpp  right-rectangles-method.cpp  simpsons-method.cpp  trapezes-method.cpp
